<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="dutVisuVBT" Id="{a6017057-0314-4db6-b659-8cddffc98852}">
    <Declaration><![CDATA[TYPE dutVisuVBT :
STRUCT
	
	(*Values linked to HMI*)
	(*Vacuum Belt Table Operational values*)
	nVmin_mMin  	: INT;
	nVmax_mMin		: INT;
	tStartDelay_s   : INT;
	tStopDelay_s 	: INT;
	bVisionBypass  	: INT;
	
	(*VBT Jogging*)
	bLeftJog		: BOOL;
	bRightJog  		: BOOL;
	nJogSpeed  		: INT;
	
	(*Fan Volume Control*)
	bFanIncrease	: BOOL;
	bFanDecrease    : BOOL;
	nFanSpeed_pct	: INT;

	(*Start Feeder*)	
	bStartFeeder	: BOOL;
	bStopFeeder		: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>