<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="FeederMode" Id="{b21c0dd5-4d73-4284-9647-4c9d689622b4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE FeederMode :
(
	Mode_Jog		:= 0,
	Mode_Standard	:= 1,
	Mode_Simulation	:= 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>