<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="FeedingState" Id="{c893dbe9-bafd-4cd0-9c79-c8c4b2aead78}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE FeedingState :
(
	State_Init 					,
	State_AutoStart         	,
	State_AutoHysterisis    	,
	State_AutoStop          	,
	State_AutoTopSensorReached 	,
	State_AutoFinalPosition     ,
	State_AutoBackToInit        ,
	State_Feeding				,
	State_Override				,
	State_Error					,
	State_ManualMoveUp			,
	State_ManualMoveDown    	
 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>